added option to go back to main menu

--- a/templates/workout_tracker.html
+++ b/templates/workout_tracker.html
@@ -20,5 +20,9 @@
 </div>
 {% endif %}
 
+<div class="mb-3">
+    <a href="{{ url_for('home') }}" class="btn btn-secondary">← Back to Main Menu</a>
+</div>
+
 <script src="{{ url_for('static', filename='js/autocomplete.js') }}"></script>
 {% endblock %}
