--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,11 @@
-{% extends "base.html" %}
+{% extends 'layout.html' %}
+
+{% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="text-center">
-    <h2>Welcome to the Health & Wellness Tracker</h2>
-    <p class="mt-3">Choose one of the options below to get started.</p>
-
-    <div class="d-grid gap-3 col-6 mx-auto mt-4">
-        <a href="{{ url_for('food_tracker') }}" class="btn btn-success btn-lg">Track Food Calories</a>
-        <a href="{{ url_for('workout_tracker') }}" class="btn btn-primary btn-lg">Track Workout Calories</a>
-    </div>
-</div>
+    <section>
+        <h2>Welcome to Your Health & Wellness Tracker!</h2>
+        <p>This website helps you track your food calories and workout calories burned. It's simple, easy to use, and requires no registration.</p>
+        <p>Use the navigation menu above to get started.</p>
+    </section>
 {% endblock %}
